--- a/oper.html
+++ b/oper.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Храмцов Максим 3419/1
-    <br>
-    <a href="oper.html">Операционные системы</a>
+   Операционные системы 
 </body>
 </html>
