--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+    body{
+        background-image: url(Devil-May-Cry-Vergil.avif);
+        color: rgb(255, 255, 255);
+    }
+</style>
 </head>
 <body>
-    Храмцов Максим 3419/1
+    <h1>Храмцов Максим 3419/1</h1>
     <br>
-    <a href="oper.html">Операционные системы</a>
+    <a href="oper.html"><h2>Операционные системы</h2></a>
 </body>
 </html>
