--- a/oper.html
+++ b/oper.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Опр.системы</title>
+    <style>
+        body{
+            background-image: url(tf2.jpg);
+            color: white;
+        }
+        .logo{width: 100px ;}
+    </style>
 </head>
 <body>
-   Операционные системы 
+   <h1>Операционные системы</h1>
+   <h2>Microsoft Windows</h2><img class= "logo" src="windows.jpg">
+   <h2>Google Android</h2><img class="logo" src="android.png">
+   <h2>Apple iOS</h2><img class="logo" src="i.webp">
+   <h2>Linux</h2><img class="logo" src="linux_PNG21.webp">
+   <h2>Huawei HarmonyOS</h2><img class="logo" src="i (1).webp">
+   <h2></h2>
 </body>
 </html>
