--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Motivation</title>
 <style>
     body{
-        background-image: url(Devil-May-Cry-Vergil.avif);
+        background-image: url(images/Devil-May-Cry-Vergil.avif);
+        background-size: cover;
         color: rgb(255, 255, 255);
     }
 </style>
