--- a/oper.html
+++ b/oper.html
@@ -6,19 +6,32 @@
     <title>Опр.системы</title>
     <style>
         body{
-            background-image: url(tf2.jpg);
+            background-image: url(images/tf2.jpg);
+            background-size: cover;
             color: white;
         }
         .logo{width: 100px ;}
+        h1{
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 40px;
+            color: rgb(255, 255, 255);
+            text-shadow: 5px 10px 7px rgb(0, 0, 0);
+        }
+        h2{
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 30px;
+            color: rgb(255, 255, 255);
+            text-shadow: 5px 10px 7px rgb(0, 0, 0);
+        }
     </style>
 </head>
 <body>
    <h1>Операционные системы</h1>
-   <h2>Microsoft Windows</h2><img class= "logo" src="windows.jpg">
-   <h2>Google Android</h2><img class="logo" src="android.png">
-   <h2>Apple iOS</h2><img class="logo" src="i.webp">
-   <h2>Linux</h2><img class="logo" src="linux_PNG21.webp">
-   <h2>Huawei HarmonyOS</h2><img class="logo" src="i (1).webp">
+   <h2>Microsoft Windows</h2><img class= "logo" src="images/windows.jpg">
+   <h2>Google Android</h2><img class="logo" src="images/android.png">
+   <h2>Apple iOS</h2><img class="logo" src="images/i.webp">
+   <h2>Linux</h2><img class="logo" src="images/linux_PNG21.webp">
+   <h2>Huawei HarmonyOS</h2><img class="logo" src="images/i (1).webp">
    <h2></h2>
 </body>
 </html>
