--- a/oper.html
+++ b/oper.html
@@ -4,26 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Опр.системы</title>
-    <style>
-        body{
-            background-image: url(images/tf2.jpg);
-            background-size: cover;
-            color: white;
-        }
-        .logo{width: 100px ;}
-        h1{
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 40px;
-            color: rgb(255, 255, 255);
-            text-shadow: 5px 10px 7px rgb(0, 0, 0);
-        }
-        h2{
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 30px;
-            color: rgb(255, 255, 255);
-            text-shadow: 5px 10px 7px rgb(0, 0, 0);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1>Операционные системы</h1>
