--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
         background-size: cover;
         color: rgb(255, 255, 255);
     }
+    .main{
+        background-color: rgba(0, 0, 0, 0.308);
+        width: 265px;
+        border: 1px solid white;
+        border-radius: 20px;
+    }
 </style>
 </head>
 <body>
+   
     <h1>Храмцов Максим 3419/1</h1>
     <br>
-    <a href="oper.html"><h2>Операционные системы</h2></a>
+     <div class="main">
+        <a href="oper.html"><h2>Операционные системы</h2></a>
+    
+    </div>
 </body>
 </html>
