--- a/oper.html
+++ b/oper.html
@@ -5,14 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Опр.системы</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .desk_OS{
+            background-color: rgba(14, 14, 14, 0.192);
+            width: 300px;
+            border: 1px solid white;
+            border-radius: 20px;
+            box-shadow: 5px 15px 7px rgba(255, 255, 255, 0.486);
+        }
+        .phone_OS{
+            background-color: rgba(14, 14, 14, 0.192);
+            width: 300px;
+            border: 1px solid white;
+            border-radius: 20px;
+            box-shadow: 5px 15px 7px rgba(255, 255, 255, 0.486);
+        }
+        .server_OS{
+            background-color: rgba(14, 14, 14, 0.192);
+            width: 300px;
+            border: 1px solid white;
+            border-radius: 20px;
+            box-shadow: 5px 15px 7px rgba(255, 255, 255, 0.486);
+        }
+    </style>
 </head>
 <body>
    <h1>Операционные системы</h1>
-   <h2>Microsoft Windows</h2><img class= "logo" src="images/windows.jpg">
-   <h2>Google Android</h2><img class="logo" src="images/android.png">
-   <h2>Apple iOS</h2><img class="logo" src="images/i.webp">
-   <h2>Linux</h2><img class="logo" src="images/linux_PNG21.webp">
-   <h2>Huawei HarmonyOS</h2><img class="logo" src="images/i (1).webp">
-   <h2></h2>
+<div class="desk_OS" >
+    <h2>Десктопные ОС</h2>
+    <p>Microsoft Windows</p><img class= "logo" src="images/windows.jpg">
+    <p>Linux</p><img class="logo" src="images/linux_PNG21.webp">
+    <p>MacOS</p><img class="logo" src="images/MacOS_logo_(2017).svg.png">
+</div>
+<br>
+<div class="phone_OS">
+    <h2>Мобильные ОС</h2>
+    <p>Google Android</p><img class="logo" src="images/android.png">
+    <p>Apple iOS</p><img class="logo" src="images/i.webp">
+    <p>Huawei HarmonyOS</p><img class="logo" src="images/i (1).webp">
+</div>
+<br>
+<div class="server_OS">
+    <h2>Серверные ОС</h2>
+    <p>Windows Server</p><img class="logo" src="images/20210521_udalennoye-administrirovaniye_windows_servera_1.png">
+    <p>Ubuntu Server</p><img class="logo" src="images/7aa10abc45d6b57094abb753e592411df698c39f.webp">
+    <p>CentOS</p><img class="logo" src="images/logo_centos.png">
+    <p>Red hat Enterprise Linux</p><img class="logo" src="images/c5a33239f2ff67832f0e2ee485867c7eca1aad6b.jpg">
+</div>
+   
 </body>
 </html>
